# witmotion-imu-driver

./: CMakeLists.txt  README.md
docs/: design.odg
include/: IMU.h  Message.h  Serial.h  Witmotion.h  imu_data.h
include/witmotion/: wit_c_sdk.h
src/: IMU.cpp  Message.cpp  Serial.cpp  Witmotion.cpp  imu_data.cpp
src/witmotion/: serial.c  wit_c_sdk.c
test/: test_serial.cpp
